# DiamondSquare

./: CMakeLists.txt
include/: camera.h  light.h  mesh.h  shader.h  terrain.h  window.h
include/glad/: glad.h
res/shader/: fragment.glsl  lightFragment.glsl  vertex.glsl
src/: diamond.cpp  glad.c  light.cpp  main.cpp  mesh.cpp  terrain.cpp
